welcome.lessons.welcome.methods.slug.SlugSnail.scala.error
SlugSnail:3: error: ')' expected but '=' found.
     if(c:Color = color.pink){
                ^SlugSnail:6: error: illegal start of simple expression
 }
 ^