welcome.lessons.welcome.methods.slug.SlugSnail.scala.code
def hunt(c:Color) {
     if(c:Color = color.pink){
       isFacingTrail()
     }
 }

def isFacingTrail():Boolean = {
		var color = false
  	while(color==false){
  		if (!estFaceMur()){
        avance()
      	if(getCouleurSol()==Color.green){
      		recule()
        	color=true
    		}
    	
    
     	else { recule()
        		gauche()
   }
      }
      else { 
      			gauche()}
      
      }

return color

}